--- a/main.html
+++ b/main.html
@@ -104,7 +104,9 @@
 </head>
 
 <body>
+
     <div class="box">
+<h1> Calculator</h1>
         <div class="text-area">
             <textarea id="textttArea"></textarea>
         </div>
