--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
 <body>
 
     <div class="box">
-<h1> Calculator</h1>
+<h1 style="color: white;"> Calculator</h1>
         <div class="text-area">
             <textarea id="textttArea"></textarea>
         </div>
