--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
             background-color: rgba(18, 18, 18, 0.409);
             color: white;
             /* Text color */
-            border: none;
+              border: white 2px solid;
             /* No border */
             border-radius: 5px;
             /* Rounded corners */
